<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/async_layout_padding">

    <Button
        android:id="@+id/btn_async_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_async_create"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_async_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_async_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_async_create"
        app:layout_constraintEnd_toStartOf="@id/btn_async_cancel"/>

    <Button
        android:id="@+id/btn_async_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_async_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:textSize="@dimen/async_thread_text_size"
        android:textStyle="bold"
        android:text="@string/async_init_text"/>

</android.support.constraint.ConstraintLayout>