<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/pager_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/movie_det_large_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:scaleType="fitXY"
        tools:src="@drawable/jurassicworld2_large"
        android:contentDescription="@string/movieDetLargeImgContDesc"/>

    <!-- center part with small picture, title, release and trailer -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/marginUnderLargeImg">

        <ImageView
            android:id="@+id/movie_det_small_img"
            android:layout_width="@dimen/movieDetSmallImgWidth"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            tools:src="@drawable/jurasic_park_small"
            android:scaleType="fitStart"
            android:layout_marginStart="@dimen/movieDetSmallImgSideMargin"
            android:layout_marginEnd="@dimen/movieDetSmallImgSideMargin"
            android:contentDescription="@string/movieListSmallImgContDesc"/>

        <TextView
            android:id="@+id/movie_det_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            tools:text="Movie Title"
            android:textColor="@android:color/holo_purple"
            android:textStyle="bold"
            android:textSize="@dimen/movieDetTitleTextSize"
            android:layout_toEndOf="@id/movie_det_small_img"/>

        <TextView
            android:id="@+id/txt_released_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/movie_det_small_img"
            android:layout_below="@id/movie_det_title_tv"
            android:layout_marginStart="0dp"
            android:textStyle="bold"
            android:textSize="@dimen/movieDetReleaseTextSize"
            android:textColor="@android:color/black"
            android:text="@string/movieDetReleaseLabel"/>

        <TextView
            android:id="@+id/movie_det_release_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txt_released_label"
            android:layout_below="@id/movie_det_title_tv"
            android:layout_marginStart="16dp"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/movieDetReleaseTextSize"
            tools:text="01/01/2018"/>

        <Button
            android:id="@+id/movie_det_trailer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/movie_det_small_img"
            android:layout_below="@id/txt_released_label"
            android:layout_marginTop="16dp"
            android:text="@string/trailerButtonLabel"/>
    </RelativeLayout>

    <!-- Overview: Title and the text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/overviewLabel"/>

        <TextView
            android:id="@+id/movie_det_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="When the island's dormant volcano begins roaring to life, Owen and Claire mount a campaign to rescue the remaining dinosaurs from this extinction-level event."/>

    </LinearLayout>



</LinearLayout>